# vfio-toggle

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml  setup.sh  vfio_toggle.spec
secrets/: NOTES.md
src/vfio_toggle/: __main__.py  cli.py  generate_devices.py  vfio_toggle.py
src/vfio_toggle/resources/: example-devices.json  vfio-toggle.service
